Changed some of the structure of the bot, and added a few commands

--- a/GalacticFlashBot/GalacticFlashBot/GalacticFlashBot.csproj
+++ b/GalacticFlashBot/GalacticFlashBot/GalacticFlashBot.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands.cs" />
+    <Compile Include="Hello.cs" />
+    <Compile Include="Info.cs" />
     <Compile Include="IrcClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
